--- a/resources/not-found.html
+++ b/resources/not-found.html
@@ -42,6 +42,6 @@
 <body>
 <p>404 Not Found - No redirection target available for</p>
 <p class="bold" id="link">{{.RedirectName}}</p>
-<p>Looks like someone may have sent you the wrong link or you mistyped somewhere!</p>
+<p>Looks like someone may have sent you the wrong link, or you mistyped somewhere!</p>
 </body>
 </html>
